--- a/Customizer_Linux_Script.html
+++ b/Customizer_Linux_Script.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> </title>
-</head>
 <body>
-    <p> See the image tattoo in the /etc/buildArtifacts folder </p>
+<h1> Azure VM Image Builder : Image Tattoo </h1>
+<h4> See the image tattoo in the /etc/buildArtifacts folder</h4>        
 </body>
 </html>
